fixed rendering errors

--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -231,9 +231,9 @@
 
 - number: '1'
   author: 'Adhikari, Kartick and Kishore Reddy, Nanda and Ram Reddy, Tulasi and Saha, Koushik'
-  fjournal: 'Annales de l&#39;Institut Henri Poincar&#39;e Probabilit&#39;es et Statistiques'
+  fjournal: 'Annales de l&#39;Institut Henri Poincar&eacute; Probabilit&eacute;s et Statistiques'
   url: 'https://doi.org/10.1214/14-AIHP632'
-  journal: 'Ann. Inst. Henri Poincar&#39;e Probab. Stat.'
+  journal: 'Ann. Inst. Henri Poincar&eacute; Probab. Stat.'
   mrnumber: '3449292'
   pages: '16-46'
   year: '2016'
@@ -625,7 +625,7 @@
   volume: '59'
   issn: '1747-6933'
 
-- author: 'Ayyer, Arvind and Bouttier, J&#39;er&#39;emie and Corteel, Sylvie and Nunzi, Fran&ccedil;cois'
+- author: 'Ayyer, Arvind and Bouttier, J&eacute;r&eacute;mie and Corteel, Sylvie and Nunzi, Fran&ccedil;cois'
   fjournal: 'Electronic Journal of Probability'
   url: 'https://doi.org/10.1214/EJP.v20-3495'
   journal: 'Electron. J. Probab.'
@@ -979,7 +979,7 @@
   mrnumber: '3869743'
   pages: '15-26'
   year: '2019'
-  title: 'On symmetry preserving and symmetry broken bright, dark and antidark soliton solutions of nonlocal nonlinear Schr&oslash;dinger equation'
+  title: 'On symmetry preserving and symmetry broken bright, dark and antidark soliton solutions of nonlocal nonlinear Schr&ouml;dinger equation'
   doi: '10.1016/j.physleta.2018.10.011'
   mrclass: '35Q55 (35A30 35C08)'
   volume: '383'
@@ -1633,7 +1633,7 @@
   issn: '0003-486X'
 
 - number: '1-2'
-  author: 'Ayyer, Arvind and Schilling, Anne and Steinberg, Benjamin and Thi&#39;ery, Nicolas M.'
+  author: 'Ayyer, Arvind and Schilling, Anne and Steinberg, Benjamin and Thi&eacute;ry, Nicolas M.'
   fjournal: 'International Journal of Algebra and Computation'
   url: 'https://doi.org/10.1142/S0218196715400081'
   journal: 'Internat. J. Algebra Comput.'
@@ -1692,7 +1692,7 @@
 
 - number: '1'
   author: 'Bagchi, Sayan and Thangavelu, Sundaram'
-  fjournal: 'Journal d&#39;Analyse Math&#39;ematique'
+  fjournal: 'Journal d&#39;Analyse Math&eacute;matique'
   url: 'https://doi.org/10.1007/s11854-018-0053-8'
   journal: 'J. Anal. Math.'
   mrnumber: '3892467'
@@ -2493,7 +2493,7 @@
 
 - number: '1'
   author: 'Boggarapu, Pradeep and Thangavelu, Sundaram'
-  fjournal: 'Annales Math&#39;ematiques Blaise Pascal'
+  fjournal: 'Annales Math&eacute;matiques Blaise Pascal'
   url: 'http://ambp.cedram.org/item?id=AMBP_2015__22_1_89_0'
   journal: 'Ann. Math. Blaise Pascal'
   mrnumber: '3361565'
@@ -2505,7 +2505,7 @@
   volume: '22'
   issn: '1259-1734'
 
-- author: 'Ayyer, Arvind and Bouttier, J&#39;er&#39;emie and Corteel, Sylvie and Linusson, Svante and Nunzi, Fran&ccedil;cois'
+- author: 'Ayyer, Arvind and Bouttier, J&eacute;r&eacute;mie and Corteel, Sylvie and Linusson, Svante and Nunzi, Fran&ccedil;cois'
   fjournal: 'Advances in Applied Mathematics'
   url: 'https://doi.org/10.1016/j.aam.2018.03.001'
   journal: 'Adv. in Appl. Math.'
@@ -3550,7 +3550,7 @@
   issn: '1433-5883'
 
 - number: '1-2'
-  author: 'B&oslash;cherer, Siegfried and Das, Soumya'
+  author: 'B&ouml;cherer, Siegfried and Das, Soumya'
   fjournal: 'Mathematische Zeitschrift'
   url: 'https://doi.org/10.1007/s00209-015-1609-2'
   journal: 'Math. Z.'
@@ -4940,8 +4940,8 @@
   mrnumber: '3815225'
   pages: '23-40'
   year: '2018'
-  mrreviewer: 'Gabriella B&oslash;hm'
-  title: 'Modular Hecke algebras over M&oslash;bius categories'
+  mrreviewer: 'Gabriella B&ouml;hm'
+  title: 'Modular Hecke algebras over M&ouml;bius categories'
   doi: '10.1016/j.geomphys.2018.04.008'
   mrclass: '16T05 (11F03)'
   volume: '131'
@@ -5963,7 +5963,7 @@
   issn: '1747-6933'
 
 - number: '4'
-  author: 'Gaussier, Herv&#39;e and Seshadri, Harish'
+  author: 'Gaussier, Herv&eacute; and Seshadri, Harish'
   fjournal: 'European Journal of Mathematics'
   url: 'https://doi.org/10.1007/s40879-017-0177-x'
   journal: 'Eur. J. Math.'
@@ -6507,7 +6507,7 @@
   mrnumber: '3836111'
   pages: '083103, 12'
   year: '2018'
-  title: 'Deformation of dark solitons in a $\mathcal{PT}$-invariant variable coefficients nonlocal nonlinear Schr&oslash;dinger equation'
+  title: 'Deformation of dark solitons in a $\mathcal{PT}$-invariant variable coefficients nonlocal nonlinear Schr&ouml;dinger equation'
   doi: '10.1063/1.5039901'
   mrclass: '82C10'
   volume: '28'
@@ -8223,7 +8223,7 @@
   mrnumber: '3451268'
   pages: '111-130'
   year: '2016'
-  mrreviewer: 'Jos&#39;e Antonio Vilches'
+  mrreviewer: 'Jos&eacute; Antonio Vilches'
   title: 'Simple crystallizations of 4-manifolds'
   doi: '10.1515/advgeom-2015-0043'
   mrclass: '57Q15 (05C90 57N13 57Q05)'
@@ -8501,7 +8501,7 @@
 
 - number: '4'
   author: 'Banerjee, Abhishek'
-  fjournal: 'Comptes Rendus Math&#39;ematique. Acad&#39;emie des Sciences. Paris'
+  fjournal: 'Comptes Rendus Math&eacute;matique. Acad&eacute;mie des Sciences. Paris'
   url: 'https://doi.org/10.1016/j.crma.2018.02.012'
   journal: 'C. R. Math. Acad. Sci. Paris'
   mrnumber: '3787524'
@@ -8625,7 +8625,7 @@
   issn: '2538-225X'
 
 - number: '3'
-  author: 'Ayyer, Arvind and Schilling, Anne and Steinberg, Benjamin and Thi&#39;ery, Nicolas M.'
+  author: 'Ayyer, Arvind and Schilling, Anne and Steinberg, Benjamin and Thi&eacute;ry, Nicolas M.'
   fjournal: 'Communications in Mathematical Physics'
   url: 'https://doi.org/10.1007/s00220-015-2343-7'
   journal: 'Comm. Math. Phys.'
@@ -8685,7 +8685,7 @@
   mrclass: '76N15 (35L60 35L65 35L67 65M08)'
   volume: '4'
 
-- author: 'B&oslash;cherer, Siegfried and Das, Soumya'
+- author: 'B&ouml;cherer, Siegfried and Das, Soumya'
   fjournal: 'Journal f\"ur die Reine und Angewandte Mathematik. [Crelle&#39;s Journal]'
   url: 'https://doi.org/10.1515/crelle-2015-0075'
   journal: 'J. Reine Angew. Math.'
@@ -9609,7 +9609,7 @@
   pages: '45-71'
   year: '2018'
   mrreviewer: 'Feng Rong'
-  title: 'Ergodic properties of families of H&#39;enon maps'
+  title: 'Ergodic properties of families of H&eacute;non maps'
   doi: '10.4064/ap170928-2-4'
   mrclass: '37F45'
   volume: '121'
@@ -9671,7 +9671,7 @@
 
 - number: '2'
   author: 'Balakumar, G. P. and Mahajan, Prachi and Verma, Kaushal'
-  fjournal: 'Annales de la Facult&#39;e des Sciences de Toulouse. Math&#39;ematiques. S&#39;erie 6'
+  fjournal: 'Annales de la Facult&eacute; des Sciences de Toulouse. Math&eacute;matiques. S&eacute;rie 6'
   url: 'https://doi.org/10.5802/afst.1449'
   journal: 'Ann. Fac. Sci. Toulouse Math. (6)'
   mrnumber: '3358614'
@@ -9953,7 +9953,7 @@
   issn: '0025-5874'
 
 - number: '1'
-  author: 'Gaussier, Herv&#39;e and Seshadri, Harish'
+  author: 'Gaussier, Herv&eacute; and Seshadri, Harish'
   fjournal: 'Proceedings of the American Mathematical Society'
   url: 'https://doi.org/10.1090/proc/14217'
   journal: 'Proc. Amer. Math. Soc.'
@@ -10789,7 +10789,7 @@
 
 - number: '1'
   author: 'Misra, Gadadhar and Pal, Avijit'
-  fjournal: 'Journal d&#39;Analyse Math&#39;ematique'
+  fjournal: 'Journal d&#39;Analyse Math&eacute;matique'
   url: 'https://doi.org/10.1007/s11854-018-0054-7'
   journal: 'J. Anal. Math.'
   mrnumber: '3892468'
@@ -10940,7 +10940,7 @@
   pages: '1155-1173'
   year: '2015'
   mrreviewer: 'Benjamin Linowitz'
-  title: 'Action de Hopf sur les op&#39;erateurs de Hecke modulaires tordus'
+  title: 'Action de Hopf sur les op&eacute;rateurs de Hecke modulaires tordus'
   doi: '10.4171/JNCG/219'
   mrclass: '11F03 (16T05)'
   volume: '9'
@@ -11201,8 +11201,8 @@
   issn: '0731-5090'
 
 - author: 'Ayyer, Arvind and Prasad, Amritanshu and Spallone, Steven'
-  fjournal: 'S&#39;eminaire Lotharingien de Combinatoire'
-  journal: 'S&#39;em. Lothar. Combin.'
+  fjournal: 'S&eacute;minaire Lotharingien de Combinatoire'
+  journal: 'S&eacute;m. Lothar. Combin.'
   mrnumber: '3510808'
   pages: 'Art. B75g, 13'
   year: '2018'
@@ -11258,8 +11258,8 @@
   issn: '0036-1429'
 
 - author: 'Biswas, Indranil and Pingali, Vamsi Pritham'
-  fjournal: '&#39;Epijournal de G&#39;eom&#39;etrie Alg&#39;ebrique. EPIGA'
-  journal: '&#39;Epijournal Geom. Alg&#39;ebrique'
+  fjournal: '&#39;Epijournal de G&eacute;om&eacute;trie Alg&eacute;brique. EPIGA'
+  journal: '&#39;Epijournal Geom. Alg&eacute;brique'
   mrnumber: '3894855'
   pages: 'Art. 6, 13'
   year: '2018'
@@ -11284,7 +11284,7 @@
   issn: '0022-247X'
 
 - number: '4'
-  author: 'Gaussier, Herv&#39;e and Seshadri, Harish'
+  author: 'Gaussier, Herv&eacute; and Seshadri, Harish'
   fjournal: 'Computational Methods and Function Theory'
   url: 'https://doi.org/10.1007/s40315-018-0243-5'
   journal: 'Comput. Methods Funct. Theory'
@@ -11919,7 +11919,7 @@
   volume: '41'
   issn: '0020-7225'
 
-- author: 'B&oslash;cherer, Siegfried and Das, Soumya'
+- author: 'B&ouml;cherer, Siegfried and Das, Soumya'
   fjournal: 'Advances in Mathematics'
   url: 'https://doi.org/10.1016/j.aim.2018.07.033'
   journal: 'Adv. Math.'
@@ -11947,7 +11947,7 @@
   issn: '1077-8926'
 
 - number: '1'
-  author: 'Ayyer, Arvind and Schilling, Anne and Thi&#39;ery, Nicolas M.'
+  author: 'Ayyer, Arvind and Schilling, Anne and Thi&eacute;ry, Nicolas M.'
   fjournal: 'Experimental Mathematics'
   url: 'https://doi.org/10.1080/10586458.2015.1107868'
   journal: 'Exp. Math.'
@@ -12478,7 +12478,7 @@
 
 - number: '3'
   author: 'Kor&#39;anyi, Adam and Misra, Gadadhar'
-  fjournal: 'Comptes Rendus Math&#39;ematique. Acad&#39;emie des Sciences. Paris'
+  fjournal: 'Comptes Rendus Math&eacute;matique. Acad&eacute;mie des Sciences. Paris'
   url: 'https://doi.org/10.1016/j.crma.2015.11.002'
   journal: 'C. R. Math. Acad. Sci. Paris'
   mrnumber: '3463026'
@@ -12894,7 +12894,7 @@
 
 - number: '5'
   author: 'Biswas, Indranil and Seshadri, Harish'
-  fjournal: 'Comptes Rendus Math&#39;ematique. Acad&#39;emie des Sciences. Paris'
+  fjournal: 'Comptes Rendus Math&eacute;matique. Acad&eacute;mie des Sciences. Paris'
   url: 'https://doi.org/10.1016/j.crma.2017.03.012'
   journal: 'C. R. Math. Acad. Sci. Paris'
   mrnumber: '3650386'
