crude publications by author

--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -79,7 +79,7 @@
   phd: IISc-TIFR
   phone-ext: 3210
   office: L29
-  author-name: Ghosh, Mrinal
+  author-name: "Ghosh, Mrinal K."
 
 - name: Thirupathi Gudi
   user-id: gudi
@@ -106,7 +106,7 @@
   phd: UC, Santa Barbara
   phone-ext: 3327
   office: L15
-  author-name: Iyer, Srikanth
+  author-name: "Iyer, Srikanth K."
 
 - name: Apoorva Khare
   user-id: khare
@@ -161,7 +161,7 @@
   phd: Bombay
   phone-ext: 3212
   office: R25
-  author-name: Patil, Dilip
+  author-name: "Patil, Dilip P."
 
 - name: Vamsi Pritham Pingali
   user-id: vamsipingali
@@ -170,7 +170,7 @@
   phd: Stony Brook
   phone-ext: 2754
   office: N23
-  author-name: Pingali, Vamsi
+  author-name: "Pingali, Vamsi P."
 
 - name: Govindan Rangarajan
   user-id: rangaraj
