--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -8390,6 +8390,20 @@
   mrclass: '45E99 (76B15)'
   issn: '2090-5572'
 
+- author: 'Arunkumar, G. and Kus, Deniz and Venkatesh, R.'
+  fjournal: 'Journal of Algebra'
+  url: 'https://doi.org/10.1016/j.jalgebra.2017.11.050'
+  journal: 'J. Algebra'
+  mrnumber: '3758516'
+  pages: '538-569'
+  year: '2018'
+  mrreviewer: 'Anthony Henderson'
+  title: 'Root multiplicities for Borcherds algebras and graph coloring'
+  doi: '10.1016/j.jalgebra.2017.11.050'
+  mrclass: '05E18 (05C15 05C31 20C08)'
+  volume: '499'
+  issn: '0021-8693'
+
 - number: '2'
   author: 'Thangavelu, Sundaram and Naidu Dogga, Venku'
   fjournal: 'Advances in Pure and Applied Mathematics'
