--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -26,14 +26,14 @@
   office: L19
   author-name: "Bharali, Gautam"
 
-- name: Tirthankar Bhattacharya
+- name: Tirthankar Bhattacharyya
   user-id: tirtha
   position: Professor
   research-areas: Operator theory
   phd: ISI
   phone-ext: 2710
   office: L27
-  author-name: Bhattacharya, Tirthankar
+  author-name: Bhattacharyya, Tirthankar
 
 - name: Soumya Das
   user-id: soumya
