--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -2096,6 +2096,19 @@
   volume: '13'
   issn: '1661-6952'
 
+- author: 'Khare, Apoorva and Tikaradze, Akaki'
+  fjournal: 'Linear Algebra and its Applications'
+  url: 'https://doi.org/10.1016/j.laa.2018.05.035'
+  journal: 'Linear Algebra Appl.'
+  mrnumber: '3958126'
+  pages: '106-126'
+  year: '2019'
+  title: 'A Carlitz-von Staudt type theorem for finite rings'
+  doi: '10.1016/j.laa.2018.05.035'
+  mrclass: '16P10 (16K20)'
+  volume: '568'
+  issn: '0024-3795'
+
 - author: 'Prasad, U. R. and Grimm, W. and Berger, E.'
   series: 'Lect. Notes Control Inf. Sci.'
   url: 'http://dx.doi.org/10.1007/BFb0004265'
@@ -13753,6 +13766,19 @@
   mrclass: '14A20 (13J10 14A15)'
   volume: '507'
   issn: '0021-8693'
+
+- author: 'Belton, Alexander and Guillot, Dominique and Khare, Apoorva and Putinar, Mihai'
+  fjournal: 'Linear Algebra and its Applications'
+  url: 'https://doi.org/10.1016/j.laa.2018.03.035'
+  journal: 'Linear Algebra Appl.'
+  mrnumber: '3958142'
+  pages: '142-157'
+  year: '2019'
+  title: 'Simultaneous kernels of matrix Hadamard powers'
+  doi: '10.1016/j.laa.2018.03.035'
+  mrclass: '15B48 (15A21)'
+  volume: '576'
+  issn: '0024-3795'
 
 - number: '4'
   author: 'Nandakumaran, A. K.'
