--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -33,7 +33,9 @@
   phd: ISI
   phone-ext: 2710
   office: L27
-  author-name: Bhattacharya, Tirthankar
+  author-name:
+    - Bhattacharya, Tirthankar
+    - "Bhattacharya, T."
 
 - name: Soumya Das
   user-id: soumya
