more rendering corrections

--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -999,7 +999,7 @@
   issn: '0973-2721'
 
 - author: 'Richard, Thomas'
-  fjournal: 'Journal f\"ur die Reine und Angewandte Mathematik. [Crelle&#39;s Journal]'
+  fjournal: 'Journal f&uuml;r die Reine und Angewandte Mathematik. [Crelle&#39;s Journal]'
   url: 'https://doi.org/10.1515/crelle-2013-0042'
   journal: 'J. Reine Angew. Math.'
   mrnumber: '3353541'
@@ -2927,7 +2927,7 @@
 
 - number: '3'
   author: 'Boggarapu, Pradeep and Thangavelu, Sundaram'
-  fjournal: 'Monatshefte f\"ur Mathematik'
+  fjournal: 'Monatshefte f&uuml;r Mathematik'
   url: 'https://doi.org/10.1007/s00605-015-0790-z'
   journal: 'Monatsh. Math.'
   mrnumber: '3411248'
@@ -3513,7 +3513,7 @@
   mrnumber: '3683021'
   pages: '427-452'
   year: '2017'
-  mrreviewer: 'David Villa-Hern&#39;andez'
+  mrreviewer: 'David Villa-Hern&aacute;ndez'
   title: 'Computational aspects of Burnside rings, part I: the ring structure'
   doi: '10.1007/s13366-016-0324-4'
   mrclass: '19A22 (05E15 13P10 20C40)'
@@ -3792,7 +3792,7 @@
   mrnumber: '3848067'
   pages: '1750071, 27'
   year: '2018'
-  mrreviewer: 'Jorge Vit&#39;oria'
+  mrreviewer: 'Jorge Vit&oacute;ria'
   title: 'On Auslander&#39;s formula and cohereditary torsion pairs'
   doi: '10.1142/S0219199717500717'
   mrclass: '18E30 (18E40)'
@@ -3859,7 +3859,7 @@
 
 - number: '3'
   author: 'Senthil Raani, K. S.'
-  fjournal: 'Monatshefte f\"ur Mathematik'
+  fjournal: 'Monatshefte f&uuml;r Mathematik'
   url: 'https://doi.org/10.1007/s00605-017-1081-7'
   journal: 'Monatsh. Math.'
   mrnumber: '3709307'
@@ -3885,7 +3885,7 @@
   issn: '0008-0659'
 
 - number: '1'
-  author: 'Fern&#39;os, Talia and Singla, Pooja'
+  author: 'Fern&oacute;s, Talia and Singla, Pooja'
   fjournal: 'Glasgow Mathematical Journal'
   url: 'https://doi.org/10.1017/S001708951500018X'
   journal: 'Glasg. Math. J.'
@@ -4857,7 +4857,7 @@
   mrnumber: '3540855'
   pages: 'Art. 12, 15'
   year: '2016'
-  mrreviewer: 'Zhi L\"u'
+  mrreviewer: 'Zhi L&uuml;'
   publisher: 'Schloss Dagstuhl. Leibniz-Zent. Inform., Wadern'
   booktitle: '32nd International Symposium on Computational Geometry'
   title: 'Efficient algorithms to decide tightness'
@@ -7982,7 +7982,7 @@
   volume: '40'
 
 - number: '2'
-  author: 'Ciaurri, &#39;Oscar and Roncal, Luz and Thangavelu, Sundaram'
+  author: 'Ciaurri, &Oacute;scar and Roncal, Luz and Thangavelu, Sundaram'
   fjournal: 'Proceedings of the Edinburgh Mathematical Society. Series II'
   url: 'https://doi.org/10.1017/s0013091517000311'
   journal: 'Proc. Edinb. Math. Soc. (2)'
@@ -8713,7 +8713,7 @@
   volume: '4'
 
 - author: 'B&ouml;cherer, Siegfried and Das, Soumya'
-  fjournal: 'Journal f\"ur die Reine und Angewandte Mathematik. [Crelle&#39;s Journal]'
+  fjournal: 'Journal f&uuml;r die Reine und Angewandte Mathematik. [Crelle&#39;s Journal]'
   url: 'https://doi.org/10.1515/crelle-2015-0075'
   journal: 'J. Reine Angew. Math.'
   mrnumber: '3836146'
@@ -9302,7 +9302,7 @@
   mrclass: '30B10'
 
 - number: '1'
-  author: 'Krishnapur, Manjunath and Rider, Brian and Vir&#39;ag, B&#39;alint'
+  author: 'Krishnapur, Manjunath and Rider, Brian and Vir&aacute;g, B&aacute;lint'
   fjournal: 'Communications on Pure and Applied Mathematics'
   url: 'https://doi.org/10.1002/cpa.21573'
   journal: 'Comm. Pure Appl. Math.'
@@ -10178,7 +10178,7 @@
   mrnumber: '3365786'
   pages: '1987-2001'
   year: '2015'
-  mrreviewer: 'Guangshi L\"u'
+  mrreviewer: 'Guangshi L&uuml;'
   title: '$L^\infty$ norms of holomorphic modular forms in the case of compact quotient'
   doi: '10.1515/forum-2013-6004'
   mrclass: '11F11 (11F12)'
@@ -11151,7 +11151,7 @@
   mrnumber: '3320530'
   pages: '299-316'
   year: '2014'
-  mrreviewer: 'Lucas J&#39;odar'
+  mrreviewer: 'Lucas J&oacute;dar'
   title: 'Babu\vska&#39;s penalty method for inhomogeneous Dirichlet problem: error estimates and multigrid algorithms'
   mrclass: '65N30 (65N22 65N55)'
   volume: '5'
@@ -11285,8 +11285,8 @@
   issn: '0036-1429'
 
 - author: 'Biswas, Indranil and Pingali, Vamsi Pritham'
-  fjournal: '&#39;Epijournal de G&eacute;om&eacute;trie Alg&eacute;brique. EPIGA'
-  journal: '&#39;Epijournal Geom. Alg&eacute;brique'
+  fjournal: '&Eacute;pijournal de G&eacute;om&eacute;trie Alg&eacute;brique. EPIGA'
+  journal: '&Eacute;pijournal Geom. Alg&eacute;brique'
   mrnumber: '3894855'
   pages: 'Art. 6, 13'
   year: '2018'
@@ -11967,7 +11967,7 @@
   mrnumber: '3711045'
   pages: 'Paper 4.12, 14'
   year: '2017'
-  mrreviewer: 'Zhi L\"u'
+  mrreviewer: 'Zhi L&uuml;'
   title: 'On stacked triangulated manifolds'
   mrclass: '57Q15 (05C40 57R20)'
   volume: '24'
@@ -12504,7 +12504,7 @@
   issn: '0046-5755'
 
 - number: '3'
-  author: 'Kor&#39;anyi, Adam and Misra, Gadadhar'
+  author: 'Kor&aacute;nyi, Adam and Misra, Gadadhar'
   fjournal: 'Comptes Rendus Math&eacute;matique. Acad&eacute;mie des Sciences. Paris'
   url: 'https://doi.org/10.1016/j.crma.2015.11.002'
   journal: 'C. R. Math. Acad. Sci. Paris'
